# rules_verilator

./: .bazelrc  MODULE.bazel
verilator/: extensions.bzl  repositories.bzl
verilator/internal/: versions.bzl
