module(
    name = "rules_verilator",
    version = "0.1.0",
    compatibility_level = 1,
)

# Bazel dependencies
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")

# Build tool dependencies
bazel_dep(name = "rules_m4", version = "0.3")
bazel_dep(name = "rules_flex", version = "0.4")
bazel_dep(name = "rules_bison", version = "0.4")

# Verilog rules (not in BCR, use http_archive)
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "rules_verilog",
    urls = ["https://github.com/agoessling/rules_verilog/archive/v0.1.0.zip"],
    strip_prefix = "rules_verilog-0.1.0",
    sha256 = "401b3f591f296f6fd2f6656f01afc1f93111e10b81b9a9d291f9c04b3e4a3e8b",
)

# Verilator toolchain extension
verilator = use_extension("//verilator:extensions.bzl", "verilator")
verilator.toolchain(
    name = "verilator",
    version = "4.224",
)
# Expose verilator repositories
use_repo(verilator, "verilator_v4.224")

# Register toolchains
register_toolchains("@verilator_v4.224//toolchain:toolchain")

